@@ -1,3 +1,7 @@
+2009-04-29	Michael Lauer	<mlauer@vanille-media.de>
+
+	* Add fullscreen button
+
 2009-01-25	Aapo Rantalainen <aapo.rantalainen@gmail.com>
 
 	* Jump to newly created tab
